✨ Support for configuration files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+config = { version = "0.13.4", features = [ "yaml" ] }
 json = "0.12.4"
 tokio = { version = "1.35.1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+
