--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,5 @@
 cores:
   - 3
-queue_base_url: http://meow.meow/meow/
-queue_poll_interval: 10
+queue_base_url: http://127.0.0.1:8083/
+queue_poll_interval: 1
 max_time: 10
-max_memory: 128000000
