👽 Now verdicts return to rats backend, not queue

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,8 @@
 cores:
   - 3
-queue_base_url: http://127.0.0.1:8083/
+queue_url: http://queue.meow/solution
+verdicts_return_url: http://rats.meow/verdict
 queue_poll_interval: 1
 max_time: 10
 sunwalker_path: ./sunwalker_box
-root: ./runnerchroot/
+root: /
